# lucas

./: .gitignore  README.md  render.yaml
backend/api/: main.py  pyproject.toml
backend/api/app/: __init__.py  config.py  constants.py  dependencies.py
backend/api/app/agents/: base.py  culture.py  food.py  logistics.py  must_do.py  planner.py  safety.py
backend/api/app/models/: agents.py  base.py  culture.py  food.py  logistics.py  must_do.py  research_agent.py  research_agent_activities.py  research_agent_culture.py  research_agent_food.py  research_agent_logistics.py  research_agent_safety.py  router.py  safety.py
backend/api/app/orchestrator/: __init__.py
backend/api/app/prompts/: research_activities.md  research_culture.md  research_food.md  research_instructions.md  research_logistics.md  research_safety.md  router.md
backend/api/app/routes/: health.py  research.py
backend/api/app/schemas/: agents.py  research.py
backend/api/app/services/: research_orchestrator.py
backend/api/tests/: conftest.py
backend/api/tests/integration/: test_health.py  test_research.py  utils.py
backend/api/tests/unit/: test_culture_agent.py  test_food_agent.py  test_logistics_agent.py  test_must_do_agent.py  test_planner_agent.py  test_research_agent.py  test_research_agent_activities.py  test_research_agent_culture.py  test_research_agent_food.py  test_research_agent_logistics.py  test_research_agent_safety.py  test_research_orchestrator_service.py  test_router_agent.py  test_safety_agent.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  (+1 more)
(+33 files in other folders)
