[project]
name = "api"
version = "0.1.0"
description = "Multi-agent AI travel research API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.78.0",
    "fastapi[standard]>=0.128.4",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
