[project]
name = "api"
version = "0.1.0"
description = "Multi-agent AI travel research API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.78.0",
    "fastapi[standard]>=0.128.4",
    "pydantic-settings>=2.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "unit: mark a test as a unit test (e.g. tests/unit/).",
    "integration: mark a test as a integration test (e.g. tests/integration/)."
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]
